[Backport] Issue fixed #20367 In Compare Products page showing horizontal scroll

--- a/app/design/frontend/Magento/luma/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Magento/luma/Magento_Catalog/web/css/source/_module.less
@@ -965,6 +965,14 @@
     [class*='block-compare'] {
         display: none;
     }
+    .catalog-product_compare-index {
+        .columns {
+            .column {
+                &.main {
+                    flex-basis: inherit;
+                }
+        }   }
+    }    
 }
 
 //
